Bootstrap3: fixing alignment of account dropdown.

--- a/app/assets/stylesheets/topbar.scss
+++ b/app/assets/stylesheets/topbar.scss
@@ -58,7 +58,9 @@
     margin: 0;
 
     .dropdown > a {
+      left: 13px;
       padding: 0.25em 0 0 0;
+      position: relative;
     }
 
     .dropdown-menu {
